--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "3.8.16",
     "morgan": "1.3.1",
     "multer": "0.1.4",
+    "node-gcm": "^0.9.12",
     "notifier": "0.1.5",
     "passport": "0.2.1",
     "passport-facebook": "1.0.3",
