--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "NODE_PATH=./config:./app/controllers NODE_ENV=test ./node_modules/.bin/mocha --reporter spec --timeout 10000 test/test-*.js"
   },
   "dependencies": {
+    "apn": "^1.6.2",
     "async": "0.9.0",
     "body-parser": "1.8.2",
     "compression": "1.1.0",
